fix: iaFlowRow align-items stretch, usabilityLeft/testerBox equal height

--- a/src/components/HoxinYiScrollStory.module.css
+++ b/src/components/HoxinYiScrollStory.module.css
@@ -692,7 +692,7 @@
   .iaFlowRow {
     flex-direction: row;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: stretch;
   }
 }
 
@@ -1002,6 +1002,7 @@
     display: grid;
     grid-template-columns: 4fr 6fr;
     align-items: stretch;
+    gap: 24px;
   }
 }
 
@@ -1009,7 +1010,10 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  height: 100%;
+}
+
+.usabilityLeft .usabilityBox:last-child {
+  flex: 1;
 }
 
 .usabilityBox {
